# Myndra

./: .gitignore  CLI_READINESS_ANALYSIS.md  CMakeLists.txt  CONTRIBUTING.md  CORE_DEVELOPMENT_PLAN.md  MYNDRA_AI_REFERENCE.md  README.md  ROADMAP.md  build.bat  build.sh  debug_tokens.myn  hello.myn  test_fn.myn  test_interpreter.myn  test_parser.myn  test_stdlib.myn  test_stmt.myn
docs/: language_glossary.html  language_reference.md  programming_guide.md  quick_start.md  tutorial_3d_advanced.html  tutorial_3d_beginner.html  tutorial_3d_intermediate.html  tutorial_advanced.html  tutorial_beginner.html  tutorial_cognitive_animation.html  tutorial_intermediate.html
examples/: did_authentication.pom  dsl_capabilities.myn  hello_world.myn  hello_world.pom  live_capsules.myn  myndra3d_animation_showcase.myn  myndra3d_game_demo.myn  myndra3d_showcase.myn  myndra_cognitive_animation.myn  myndra_narrative_dsl.myn  pomegranate3d_animation_showcase.pom  pomegranate3d_game_demo.pom  pomegranate3d_showcase.pom  pomegranate_cognitive_animation.pom  pomegranate_narrative_dsl.pom  reactive_data.pom  temporal_animation.pom
include/: myndra.h  pomegranate.h
src/: compiler_impl.cpp  main.cpp  pom_pkg_main.cpp  stubs.cpp
src/interpreter/: interpreter.cpp  interpreter.h
src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
src/parser/: ast.cpp  ast.h  parser.cpp  parser.h
tests/: CMakeLists.txt  test_basic_compilation.cpp  test_lexer.cpp
